# aegis-ai

./: .gitignore  LICENSE  README.md  alembic.ini  compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
docs/: demo.cast
migrations/: env.py
migrations/versions/: 20260708_0001_initial_schema.py  20260709_0002_generated_patches.py
scripts/: benchmark_ingest.py  demo.py
src/aegis/: __init__.py
src/aegis/api/: __init__.py  app.py  bus.py  main.py  queues.py  redis_bus.py  routes.py  schemas.py  service.py
src/aegis/core/: __init__.py  channel.py  config.py  errors.py  resilience.py
src/aegis/correlation/: __init__.py  candidates.py  engine.py  models.py  similarity.py  strategies.py
src/aegis/db/: __init__.py  engine.py  models.py  repositories.py
src/aegis/detection/: __init__.py  _stats.py  _windows.py  detector.py  error_ratio.py  frequency.py  models.py  new_signature.py  retry_storm.py
src/aegis/events/: __init__.py  models.py
src/aegis/graph/: __init__.py  incident_graph.py  models.py
src/aegis/ingestion/: __init__.py  source.py  sources.py  supervisor.py
src/aegis/inspection/: __init__.py  repo.py
src/aegis/investigation/: __init__.py  assessment.py  briefs.py  data.py  evidence.py  orchestrator.py  patching.py  progress.py
src/aegis/memory/: __init__.py  embeddings.py  service.py
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_api_flow.py  test_db_roundtrip.py  test_worker_flow.py
tests/unit/: test_api.py  test_batcher.py  test_bus.py  test_channel.py  test_correlation.py  test_db_models.py  test_detection.py  test_events.py  test_graph.py  test_ingestion.py  test_inspection.py  test_investigation.py  test_memory.py  test_observability.py  test_parsing.py  test_parsing_stage.py  test_patching.py  test_resilience.py  test_tools.py  test_workers.py
(+34 files in other folders)
