[project]
name = "aegis-ai"
version = "0.1.0"
description = "Autonomous incident investigation engine: ingests distributed system logs, builds causal evidence graphs, and orchestrates AI investigators to determine probable root causes."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Dominik Lelak" }]
dependencies = [
    "alembic>=1.18.5",
    "anthropic>=0.116.0",
    "asyncpg>=0.31.0",
    "networkx>=3.6.1",
    "pgvector>=0.5.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0.51",
]

[dependency-groups]
dev = [
    "asyncpg-stubs>=0.31.2",
    "mypy>=1.15",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
    "types-networkx>=3.6.1.20260624",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "UP",       # pyupgrade
    "B",        # bugbear
    "SIM",      # simplification
    "C4",       # comprehensions
    "ASYNC",    # async pitfalls
    "PT",       # pytest style
    "RUF",      # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["aegis"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = ["src", "tests"]
files = ["src/aegis", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: spawns real worker processes; skip with -m 'not slow'",
    "integration: requires PostgreSQL and Redis; run in CI service containers",
]
